Fix deployment retrieval cutoff

--- a/Client/src/app/features/chats-page/components/chat/chat-message-list/chat-message-list.component.scss
+++ b/Client/src/app/features/chats-page/components/chat/chat-message-list/chat-message-list.component.scss
@@ -6,7 +6,6 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     height: inherit;
-    top: 100px;
     padding-bottom: 50px;
 }
 
